Login screen alignment and home page background fix

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ p {
   position: relative;
   min-width: 600px;
   max-width: 800px;
+  text-align: left;
 }
 
 .form__group:not(:last-child) {
